# GPUGST

./: .gitignore  README.md
code/D-GPUGST/: .gitignore  CMakeLists.txt
code/D-GPUGST+/: .gitignore  CMakeLists.txt
code/D-GPUGST+/include/: barrier.cuh  mapper_enactor.cuh  meta_data.cuh  prefix_scan.cuh  read_group.hpp  reducer.cuh  reducer_enactor.cuh
code/D-GPUGST+/src/: GPUHop.cu
code/D-GPUGST/include/: DPQ.cuh  exp_GPU_Hop.h  graph_hash_of_mixed_weighted_read_for_GSTP.h
code/D-GPUGST/include/graph_hash_of_mixed_weighted/common_algorithms/: graph_hash_of_mixed_weighted_connected_components.h
code/D-GPUGST/include/graph_v_of_v_idealID/: csr_graph.hpp
code/D-GPUGST/include/graph_v_of_v_idealID/common_algorithms/: graph_v_of_v_idealID_shortest_paths.h
code/D-GPUGST/include/graph_v_of_v_idealID/random_graph/: graph_v_of_v_idealID_generate_random_connected_graph.h
code/D-GPUGST/src/: main.cpp
code/D-PrunedDP++/: CMakeLists.txt
code/D-PrunedDP++/include/: exp_CPU_Hop.h  graph_hash_of_mixed_weighted_read_for_GSTP.h
code/D-PrunedDP++/include/graph_hash_of_mixed_weighted/: graph_hash_of_mixed_weighted_binary_operations.h
code/D-PrunedDP++/sh/: run_exp_CPU_Hop.sh  run_exp_CPU_Hop2.sh
code/GPUGST/: CMakeLists.txt  README.md  simple_iterative_tests.text
code/GPUGST+/: CMakeLists.txt
code/GPUGST+/include/: barrier.cuh  gpu_graph.cuh  header.h  parse_string.h
code/GPUGST+/src/: GSTnonHop.cu  README.md
code/GPUGST/include/: DPQ.cuh  exp_GPU_nonHop.h  graph_hash_of_mixed_weighted_read_for_GSTP.h
code/GPUGST/include/graph_hash_of_mixed_weighted/: graph_hash_of_mixed_weighted_binary_operations.h  graph_hash_of_mixed_weighted_update_vertexIDs.h
code/GPUGST/include/graph_hash_of_mixed_weighted/common_algorithms/: graph_hash_of_mixed_weighted_minimum_spanning_tree.h
code/GPUGST/include/graph_v_of_v_idealID/: csr_graph.hpp
code/PrunedDP++/: .bashrc  CMakeLists.txt
code/PrunedDP++/include/: exp_CPU_nonHop.h  graph_hash_of_mixed_weighted_extract_subgraph_for_a_hash_of_vertices.h  graph_hash_of_mixed_weighted_read_for_GSTP.h
code/PrunedDP++/include/graph_hash_of_mixed_weighted/: graph_hash_of_mixed_weighted.h
code/PrunedDP++/include/graph_v_of_v_idealID/common_algorithms/: graph_v_of_v_idealID_shortest_paths.h
code/PrunedDP++/sh/: run.sh  run_exp_CPU_nonHOP.sh  run_exp_CPU_nonHOP2.sh  run_exp_CPU_nonHop.sh
code/PrunedDP++/src/: main.cpp
code/cpudgst/: .gitignore  CMakeLists.txt
code/cpudgst/include/: CPUHOP.h  graph_hash_of_mixed_weighted_read_for_GSTP.h  graph_hash_of_mixed_weighted_sum_of_nw_ec.h
code/cpudgst/src/: main.cpp  try_gpu.cpp
code/cpugst/include/: CPUNONHOP.h  graph_hash_of_mixed_weighted_minimum_spanning_tree.h  graph_hash_of_mixed_weighted_read_for_GSTP.h
code/cpugst/include/graph_hash_of_mixed_weighted/two_graphs_operations/: graph_hash_of_mixed_weighted_to_graph_v_of_v_idealID.h
code/cpugst/include/graph_v_of_v_idealID/: graph_v_of_v_idealID.h
code/cpugst/include/graph_v_of_v_idealID/common_algorithms/: graph_v_of_v_idealID_connected_components.h
code/cpugst/include/text_mining/: print_items.h
code/gpu1dgst/include/: graph_hash_of_mixed_weighted_MST_postprocessing.h  graph_hash_of_mixed_weighted_read_for_GSTP.h  graph_hash_of_mixed_weighted_sum_of_nw_ec.h  test_gpu.h
code/gpu1dgst/sh/: example_run.sh  run_exp_GPU1_Hop.sh
code/gpu1dgst/src/: DPQ.cu
code/gpu1gst/include/: README.md  graph_hash_of_mixed_weighted_read_for_GSTP.h  graph_hash_of_mixed_weighted_sum_of_nw_ec.h  test_gpu.1h
code/gpu1gst/include/graph_v_of_v_idealID/: graph_v_of_v_idealID_to_graph_hash_of_mixed_weighted.h
code/gpu1gst/sh/: example_run.sh  run_exp_GPU1_nonHop.sh
code/gpu1gst/src/: DPQ.cu  main.cpp
code/gpu2dgst/: CMakeLists.txt
code/gpu2dgst/include/: gpu_graph.cuh  graph.h  graph.hpp  mapper.cuh
code/gpu2dgst/sh/: run_exp_GPU2_Hop.sh
code/gpu2gst/include/: graph.h  mapper.cuh  mapper_enactor.cuh  meta_data.cuh  read_group.hpp  reducer.cuh  reducer_enactor.cuh  util.h
code/gpu2gst/sh/: run_exp_GPU2_nonHop.sh
data/: Twitch.g  Twitch3.csv  Twitch4.csv  Twitch5.csv
sh/: example.sh  exp_D-GPUGST+.sh  exp_D-GPUGST.sh  exp_D-prunedDP++.sh  exp_GPUGST+.sh  exp_GPUGST.sh  exp_cpudgst.sh  exp_cpugst.sh  exp_gpu1dgst.sh  exp_gpu1gst.sh  exp_gpu2dgst.sh  exp_gpu2gst.sh  exp_prunedDP++.sh
